# autochannel-bot

./: .dockerignore  .env-dev  .gitignore  Dockerfile  IMPORT_ISSUE_EXPLANATION.md  MIGRATION_CONSOLIDATION.md  Makefile  OPTIMIZATION_PLAN.md  OPTIMIZATION_SUMMARY.md  Pipfile  README.md  UI_MIGRATION_COMPLETE.md  UI_MIGRATION_PLAN.md  WHY_IMPORT_ERROR_KEEPS_HAPPENING.md  autochannel.lprof  docker-compose.yml  example.env  justfile  pyproject.toml  ruff.toml  setup.py
autochannel/: __init__.py  autochannel.py  autochannel_bot.py
autochannel/data/: __init__.py  cache.py  database.py  models.py
autochannel/lib/: discordDog.py  metrics.py  plugin.py  utils.py
autochannel/lib/plugins/: ac_dbl.py  autochannels.py  help.py  join.py  mod_tools.py  server.py
migrations/: README.md  env.py
migrations/versions/: add_performance_indexes.py
ui/: Dockerfile  MIGRATION_NOTES.md  MIGRATION_STEPS.md  manage.py  pyproject.toml  run.py
ui/autochannel/: __init__.py
ui/autochannel/ui/: __init__.py  config.py
ui/autochannel/ui/api/: api_functions.py  routes.py
ui/autochannel/ui/data/: data_forms.py  data_functions.py
ui/autochannel/ui/errors/: routes.py
ui/autochannel/ui/lib/: decorators.py  discordData.py  utils.py
ui/autochannel/ui/site/: routes.py  site_functions.py
ui/autochannel/ui/static/css/: sidebar-backup.css  sidebar.css
ui/autochannel/ui/static/js/: sidebar.js
ui/autochannel/ui/templates/helpers/: _formhelpers.html
ui/autochannel/ui/templates/includes/: footer.html  instructions.html  side-nav.html  top-nav.html
ui/autochannel/ui/templates/layouts/: base.html  default.html
ui/autochannel/ui/templates/pages/: 404.html  guild-add.html  guild-categories.html  guild-db.html  guild-form.html  index.html  instructions.html  selectserver-boot.html
