[project]
name = "autochannel"
version = "9.1.3"
description = "AutoChannel Discord Bot"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "AutoChannel Bot Contributors"}
]
license = {text = "MIT"}
keywords = ["discord", "bot", "autochannel"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "aiohttp",
    "aiomeasures",
    "coloredlogs",
    "dblpy",
    "discord.py==2.3.2",
    "flask-sqlalchemy",
    "profanityfilter",
    "prometheus-client",
    "psycopg2-binary",
    "pyyaml",
    "requests",
    "sqlalchemy",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pylint",
    "sure",
]

[project.scripts]
autochannel = "autochannel.autochannel_bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pep8",
]
